# NativeVIdeo

app/: build.gradle
app/src/androidTest/java/com/tf/nativevideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/player/header/: AudioPlayer.h  BaseMedia.h  JNICallback.h  PacketQueue.h  PlayerController.h  PlayerStatus.h  VideoPlayer.h
app/src/main/cpp/player/sources/: AudioPlayer.cpp  BaseMedia.cpp  JNICallback.cpp  PacketQueue.cpp  PlayerController.cpp  PlayerStatus.cpp  VideoPlayer.cpp
app/src/main/java/com/tf/nativevideo/: MainActivity.java
app/src/main/java/com/tf/player/: NativeCall.java  NativePlayer.java  NativeVideo.java
app/src/main/java/com/tf/player/listener/: OnErrorListener.java  OnPrepareListener.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tf/nativevideo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
